--- a/particle_life.html
+++ b/particle_life.html
@@ -96,6 +96,7 @@
             canvas.addEventListener('click',
                 (e) => {
                     pulse = settings.pulseDuration;
+                    if (e.shiftKey) pulse = -pulse;
                     pulse_x = e.clientX;
                     pulse_y = e.clientY;
                 }
@@ -157,7 +158,7 @@
             })
             configFolder.add(settings, 'time_scale', 0.1, 5, 0.01).name('Time Scale').listen()
             configFolder.add(settings, 'viscosity', 0.1, 2, 0.1).name('Viscosity').listen()
-            configFolder.add(settings, 'pulseDuration', 1, 100, 1).name('Click Pulse Duration').listen()
+            configFolder.add(settings, 'pulseDuration', 1, 50, 1).name('Click Pulse Duration').listen()
             configFolder.add(settings, 'wallRepel', 0, 100, 1).name('Wall Repel').listen()
             configFolder.add(settings, 'explore').name('Random Exploration').listen()
             // Drawings
@@ -602,7 +603,7 @@
             if (settings.time_scale < 0.9) settings.time_scale *= 1.01;
             if (settings.time_scale > 1.1) settings.time_scale /= 1.01;
 
-            if (pulse > 0) pulse -= 1;
+            if (pulse != 0) pulse -= (pulse > 0) ? 1 : -1;
             if (settings.explore) exploreParameters();
         }
 
